gcc/testsuite/gcc.dg/cpp/ucnid-4-utf8.c
/* { dg-do preprocess } */
/* { dg-options "-std=c99" } */

ª
« /* not a preprocessing error because we lex it into its own token */
¶ /* not a preprocessing error because we lex it into its own token */
º
À
Ö
΄

٩ /* { dg-error "not valid at the start of an identifier" } */
A٩
0º
0٩
๙ /* { dg-error "not valid at the start of an identifier" } */
A๙
